<resources>
    <string name="app_name">E_LearningApp</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="primslide">primslide</string>
    <string name="c_users_robert_bencze_desktop_proiect_online_learning_materiale_primslide_mp4">C:Usersrobert.benczeDesktopProiect Online LearningMaterialePrimSlide.mp4</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="please_provide_your_log_in_credentials">Please provide your log in credentials</string>
    <string name="mate">TODO</string>
    <string name="matematica">Matematica</string>
    <string name="geografie">Geografie</string>
    <string name="franceza">Franceza</string>
    <string name="germana">Germana</string>
    <string name="latina">Latina</string>
    <string name="muzica">Muzica</string>
    <string name="tic">TIC</string>
    <string name="logica">Logica</string>
    <string name="chimie">Chimie</string>
    <string name="engleza">Engleza</string>
    <string name="informatica">Informatica</string>
    <string name="istorie">Istorie</string>
    <string name="romana">Romana</string>
    <string name="fizica">Fizica</string>
    <string name="economie">Economie</string>
    <string name="log_in">Log in</string>
</resources>
